add sliders to control gravity airdrag and elasticity and also added box collision tunnelling happening at less elasticity

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,15 @@ body {
 canvas {
     border: 1px solid black;
 }
+div {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+div label {
+    font-size: 1.2rem;
+}
+div input {
+    width: 40%;
+}
