--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,12 @@ body {
     display: grid;
     place-items: center;
     height: 100vh;
+    font-size: 14px;
+}
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 10px;
+    }
 }
 canvas {
     border: 1px solid black;
@@ -14,8 +20,16 @@ div {
     text-align: end;
 }
 div label {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 div input {
     width: 40%;
+}
+h3 {
+    font-size: 1.5em;
+    margin: 0 0;
+}
+.scores {
+    text-align: start;
+    padding-left: 2%;
 }
